# CLASSIFIEZ_AUTOMATIQUEMENT_DES_INFORMATIONS

./: .coverage  README.md  Requirements.txt  pyproject.toml
.github/workflows/: python-ci-cd.yml  python-ci.yml
Docs/: Fonkou_Symphor_3_présentation_052025.pptx  Fonkou_Symphor_présentation_072025.pptx  ~$Fonkou_Symphor_présentation_072025.pptx
FastAPI/: main.py  main_fast_api.py  main_gitup.py  main_test.py  model.py  predict.py  rfc_model.joblib  temp_model.joblib
Notebooks/: Fonkou_Symphor_1_notebook_160625.ipynb  Fonkou_Symphor_2_notebook_160625.ipynb  connexion_db_postgresql.ipynb
PostGreSQL/: connexion_db_postgresql.ipynb  fichier_rh_db.sql
data/: data.csv  data_cible_encoded.csv  data_encoded.csv
deploy_hugging_face/CLASSIFIEZ_AUTOMATIQUEMENT_DES_INFORMATIONS/: README.md  app.py  data_TEST.csv  logreg_model.joblib  requirements.txt  rfc_model.joblib
tests/: main.py  test_2_fonctionnel_predict_endpoint.py  test_chargement.py  test_fonctionnel_predict_endpoint.py  test_preprocessing.py
