[project]
name = "classifiez-automatiquement-les-informations"
version = "0.1.0"
description = "\"Classification automatique des informations pour déterminer les causes de turn-over pour l'ENS TechNova Partnes\""
authors = [
    {name = "Symphor FONKOU"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.3.0,<3.0.0)",
    "numpy (>=2.3.0,<3.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "statsmodels (>=0.14.4,<0.15.0)",
    "scikit-learn (>=1.7.0,<2.0.0)",
    "scipy (>=1.15.3,<2.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "notebook (>=7.4.3,<8.0.0)",
    "fastapi>=0.110,<1.0.0",
    "python-multipart (>=0.0.20,<0.0.21)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "sqlalchemy (>=2.0.42,<3.0.0)"
]

[tool.poetry]
package-mode = false
[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pandas = "^2.3.0"
numpy = "^2.3.0"
seaborn = "^0.13.2"
matplotlib = "^3.10.3"
statsmodels = "^0.14.4"
scikit-learn = "^1.7.0"
scipy = "^1.15.3"
jupyter = "^1.1.1"
notebook = "^7.4.3"
python-multipart = "^0.0.20"
sqlalchemy = "^2.0.42"
psycopg2-binary = "^2.9.10"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
